--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,10 @@ GROQ_API_KEY=
 # You only need this environment variable set if you want to use HuggingFace models
 HuggingFace_API_KEY=
 
+CEREBRAS_API_KEY=
+
+DEEPSEEK_API_KEY=
+
 
 # Get your Open AI API Key by following these instructions -
 # https://help.openai.com/en/articles/4936850-where-do-i-find-my-openai-api-key
